--- a/app/app.html
+++ b/app/app.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>Electron Boilerplate</title>
+  <title>vShare</title>
 </head>
+
 <body>
 
   <div id="app" class="container" style="display: none;">
     <h1 id="greet"></h1>
     <p>
-      Welcome to <a href="http://electron.atom.io" class="js-external-link">Electron</a> app running on this <strong id="os"></strong> machine.
+      Welcome to <a href="http://electron.atom.io" class="js-external-link">Electron</a> app running on this <strong id="os"></strong>
+      machine.
     </p>
     <p>
       App author: <strong id="author"></strong>
@@ -24,4 +27,5 @@
 
   <script src="app.js"></script>
 </body>
+
 </html>
