--- a/app/intro.html
+++ b/app/intro.html
@@ -7,5 +7,21 @@
 </head>
 <body>
 
+<div class="intro" id="disp1">
+
+</div>
+
+<div class="intro" id="disp2">
+
+</div>
+
+<div class="intro" id="disp3">
+
+</div>
+
 </body>
+
+<script>
+</script>
+
 </html>
