--- a/app/intro.html
+++ b/app/intro.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>vShare</title>
+  
+  <style>
+  	#disp1{
+		display: block;
+	}
+	#disp2{
+		display: none;
+	}
+	#disp3{
+		display: none;
+	}
+  </style>
 </head>
 <body>
 
@@ -22,6 +34,21 @@
 </body>
 
 <script>
+let advanceSlider = function(advanceTo) {
+	let id = "disp" + advanceTo;
+	document.getElementById(id).style.display = "block";
+	
+	id = "disp" + (advanceTo - 1);
+	document.getElementById(id).style.display = "none";
+};
+
+let previousSlide = function(backTo) {
+	let id = "disp" + backTo;
+	document.getElementById(id).style.display = "none";
+	
+	id = "disp" + (backTo + 1);
+	document.getElementById(id).style.display = "block";
+};
 </script>
 
 </html>
