fixed multiple issues.

--- a/app/intro.html
+++ b/app/intro.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'none'">
   <title>vShare</title>
 
   <style>
@@ -20,7 +21,6 @@
   </style>
 </head>
 <body>
-intro.html
 <div class="intro" id="disp1">
 
 </div>
