--- a/app/app.html
+++ b/app/app.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="Content-Security-Policy" content="default-src file: "/>
   <title>vShare</title>
 </head>
 <body>
-app.html
-<p id="a">test</p>
+
+
+<script src="app.js"></script>
 </body>
 </html>
