--- a/app/intro.html
+++ b/app/intro.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="Content-Security-Policy" content="default-src file: "/>
   <title>vShare</title>
-  <link rel="stylesheet" href="../static/css/intro.css"/>
+  <link rel="stylesheet" href="static/css/intro.css"/>
 </head>
 <body>
 <div class="intro" id="disp1">
@@ -20,6 +20,6 @@
 
 </div>
 
-<script src="../static/js/intro.js"></script>
+<script src="static/js/intro.js"></script>
 </body>
 </html>
