--- a/app/intro.html
+++ b/app/intro.html
@@ -3,20 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta http-equiv="Content-Security-Policy" content="default-src file: "/>
+  <meta http-equiv="Content-Security-Policy" content="default-src file: ; "/>
   <title>vShare</title>
   <link rel="stylesheet" href="static/css/intro.css"/>
 </head>
 <body>
+
 <div class="intro" id="disp1">
+
+  <img src="static/images/icon.png" class="intro-img"/>
+  <h1 class="intro-head">Intro Heading 1 </h1>
+  <p class="intro-text">Intro Text 1</p>
+  <button class="intro-next" id="next-btn-1">Next</button>
 
 </div>
 
 <div class="intro" id="disp2">
 
+  <img src="static/images/icon.png" class="intro-img"/>
+  <h1 class="intro-head">Intro Heading 2</h1>
+  <p class="intro-text">Intro Text 2</p>
+  <button class="intro-next" id="next-btn-2">Next</button>
+  <button class="intro-prev" id="prev-btn-1">Back</button>
+
 </div>
 
 <div class="intro" id="disp3">
+
+  <img src="static/images/icon.png" class="intro-img"/>
+  <h1 class="intro-head">Intro Heading 3</h1>
+  <p class="intro-text">Intro Text 3</p>
+  <button class="intro-next" id="continue-btn">Continue</button>
+  <button class="intro-prev" id="prev-btn-2">Back</button>
 
 </div>
 
