finished intro business logic.

--- a/app/intro.html
+++ b/app/intro.html
@@ -38,6 +38,18 @@
 
 </div>
 
+<div class="dots" id="dots">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+</div>
+
+<div class="user" id="userForm">
+  <input type="text" name="" id="username" placeholder="Username"/>
+  <button id="finish">Finish</button>
+</div>
+
 <script src="static/js/intro.js"></script>
+<script src="setup.js"></script>
 </body>
 </html>
