--- a/app/intro.html
+++ b/app/intro.html
@@ -45,7 +45,7 @@
 </div>
 
 <div class="user" id="userForm">
-  <input type="text" name="" id="username" placeholder="Username"/>
+  <input type="text" name="username" id="username" placeholder="Username"/><br/>
   <button id="finish">Finish</button>
 </div>
 
